Create Modules and Package

--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     }
   </style>
   <script src="p5.js"></script>
-  <script src="sketch.js"></script>
-</head>
+  <script type="module" src="js-modules/sketch.js"></script>
+  <script type="module" src="js-modules/controls.js"></script>
+
+</head
 
 <body>
   <main>
+      <div id="controls"></div>
   </main>
 </body>
 
