--- a/public/index.html
+++ b/public/index.html
@@ -25,21 +25,70 @@
 
       function onApiLoad() {
         gapi.load('picker', onPickerApiLoad);
+        gapi.load('client', intializeGapiClient);
       }
       function onPickerApiLoad() {
         pickerInited = true;
         // createPicker();
       }
-      function gisLoaded() {
-        gisInited = true;
-    }
+    //   function gisLoaded() {
+    //     gisInited = true;
+    // }
 
 
 
     </script>
     <script async defer src="https://apis.google.com/js/api.js" onload="onApiLoad()"></script>
+    <!-- <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script> -->
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
+  
     <title>React App</title>
+    <script>
+      const CLIENT_ID = '851640512484-ba4t84v64uttpjmefo6big011lffdgj2.apps.googleusercontent.com';
+      const API_KEY = 'AIzaSyCsAkar3jishAeQ1sBAEtb2Ch-7Ki1s4h4';
+
+      // Discovery doc URL for APIs used by the quickstart
+      const DISCOVERY_DOC = 'https://sheets.googleapis.com/$discovery/rest?version=v4';
+
+      // Authorization scopes required by the API; multiple scopes can be
+      // included, separated by spaces.
+      const SCOPES = 'https://www.googleapis.com/auth/spreadsheets.readonly';
+      let tokenClient;
+      let gapiInited = false;
+      // let gisInited = false;
+
+      function gapiLoaded() {
+        // eslint-disable-next-line no-undef
+        
+      }
+
+      /**
+       * Callback after the API client is loaded. Loads the
+       * discovery doc to initialize the API.
+       */
+      async function intializeGapiClient() {
+        // eslint-disable-next-line no-undef
+        await gapi.client.init({
+          immediate: true,
+          apiKey: API_KEY,
+          discoveryDocs: [DISCOVERY_DOC],
+        });
+        console.log('gapi.client.init')
+        gapiInited = true;
+        // handleAuthClick();
+      }
+
+      function gisLoaded() {
+        // eslint-disable-next-line no-undef
+        tokenClient = google.accounts.oauth2.initTokenClient({
+          immediate: true,
+          client_id: CLIENT_ID,
+          scope: SCOPES,
+          callback: '', // defined later
+        });
+        gisInited = true;
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
