Update to use Minecraft End

--- a/test/test_auth2.html
+++ b/test/test_auth2.html
@@ -34,9 +34,9 @@
       try {
         // Fetch first 10 files
         response = await gapi.client.sheets.spreadsheets.values.get({
-          // https://docs.google.com/spreadsheets/d/1ynP94NWJFvC-fogo-KSFHMa3DVFQcsyQMA1dlhqa7oc/edit#gid=0
-          spreadsheetId: '1ynP94NWJFvC-fogo-KSFHMa3DVFQcsyQMA1dlhqa7oc',
-          range: 'Gabe And KJ!A2:E',
+          // https://docs.google.com/spreadsheets/d/1pyxZFQL8iQugVgOUwbBgQN2zSnMsz6Vw21YqIdPu5QQ/edit#gid=0
+          spreadsheetId: '1pyxZFQL8iQugVgOUwbBgQN2zSnMsz6Vw21YqIdPu5QQ',
+          range: 'End!A2:E',
         });
       } catch (err) {
         console.log({ err })
